src/styles/Vault.module.css
.vault {
  column-width: 200px;
  column-gap: 2rem;
}

.imageContainer {
  cursor: pointer;
  margin: 0 0 2rem 0;
  break-inside: avoid-column;
  -webkit-column-break-inside: avoid;
  position: relative;
}

.gridImage {
  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
  display: block;
  max-width: 100%;
  width: auto;
  height: auto;
  transition: opacity 0.4s ease-in-out;
}

.modalOverlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100svh;
  background-color: rgba(0, 0, 0, 0.7);
  backdrop-filter: blur(8px);
  -webkit-backdrop-filter: blur(8px);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1;
}

.modalImage {
  display: block;
  object-fit: contain;
  width: 100vw;
  height: 100svh;
  max-width: calc(100vw - 16rem);
  max-height: calc(100svh - 16rem);
  width: auto;
  height: auto;
}

.modalCloseButton {
  position: absolute;
  top: 1rem;
  right: 1rem;
  background: none;
  border: none;
  color: var(--tertiary);
  font-size: 3rem;
  cursor: pointer;
  padding: 0 0.5rem;
  line-height: 1;
}

.fadeIn {
  opacity: 1;
}

.hidden {
  opacity: 0;
}

@media (max-width: 1400px) {
  .modalImage {
    width: 100vw;
    height: 100svh;
    max-width: calc(100vw - 4rem);
    max-height: calc(100svh - 4rem);
  }

  .vault {
    column-width: 150px;
    column-gap: 2rem;
  }
}

